--- a/array/ex1/index.html
+++ b/array/ex1/index.html
@@ -9,14 +9,16 @@
 </head>
 
 <body>
-    <input type="text" onchange="return buscar(this.value)">
-    <button type="submit"> Filtro</button>
+    <input id="input" type="text" >
+    <button id="button" type="submit"> Filtro</button>
 </body>
 
 <script>
-    let frutas = ["banana", "morango", "bacurí", "laranja"];
+    
 
 
 </script>
+
+<script src="script.js"></script>
 
 </html>
