--- a/objects/ex3/index.html
+++ b/objects/ex3/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <nav class="navbar">
-    <img class="navbar__logo" src="./imgs/logo.png" alt="Logo" />
-        <div class="group__input">
-            <input class="input__search" onKeyUp="limpar(this.value)" type="search" placeholder="Search" aria-label="Search">
-            <button class="button__search" onclick="search()"> Search </button>
-        </div>
+    <nav id="nav" class="navbar">
+    
+        
     </nav>
-    <section class="cards">
+    <section id="section-card" class="cards">
 
     </section>
     <script src="./js/main.js"></script>
+    <script src="./js/nav.js"></script>
+    <script src="./js/card.js"></script>
+    <script src="./js/filtro.js"></script>
 </body>
 </html>
